--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "humanize-plus": "^1.8.1",
     "icepick": "^1.1.0",
     "iframe-resizer": "^3.5.11",
+    "immutable": "^3.8.2",
     "inflection": "^1.7.1",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.1.2",
@@ -36,6 +37,7 @@
     "node-libs-browser": "^2.0.0",
     "normalizr": "^3.0.2",
     "number-to-locale-string": "^1.0.1",
+    "oidc-client": "^1.4.1",
     "password-generator": "^2.0.1",
     "prop-types": "^15.5.7",
     "react": "15",
@@ -64,6 +66,7 @@
     "redux-auth-wrapper": "^1.0.0",
     "redux-form": "5",
     "redux-logger": "^3.0.1",
+    "redux-oidc": "^3.0.0-beta.16",
     "redux-promise": "^0.5.0",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.0.1",
