--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "react": "15",
     "react-addons-shallow-compare": "^15.2.1",
     "react-ansi-style": "^1.0.0",
+    "react-autosuggest": "^9.4.3",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "15",
     "react-draggable": "^2.2.3",
     "react-element-to-jsx-string": "^13.1.0",
     "react-hot-loader": "^1.3.0",
+    "react-isolated-scroll" : "0.1.1",
     "react-markdown": "^3.0.0-rc3",
     "react-motion": "^0.4.5",
     "react-redux": "^5.0.4",
